forked java, killfile, localsimulation